# AML_NYC_taxi_pro

./: .env  01_fetch_data.ipynb  02_validate_and_save.ipynb  03_transform_processed_data_into_ts_data.ipynb  04_transform_ts_data_into_features_and_targets.ipynb  09_lightgbm_model.ipynb  10_lgm_with_fe.ipynb  11_lgm_hyper.ipynb  14_model_training_pipeline.ipynb  17_fetch_predictions.ipynb  19_retraining_model.ipynb  Untitled.ipynb  pyproject.toml  test_12.ipynb
.github/workflows/: feature_pipeline.yaml  inference_pipeline.yaml
.ipynb_checkpoints/: 02_validate_and_save-checkpoint.ipynb  05_transform_raw_data_into_features_and_targets-checkpoint.ipynb  08_xgboost_model-checkpoint.ipynb  10_lgm_with_fe-checkpoint.ipynb  12_load_features_hopsworks-checkpoint.ipynb  13_feature_pipeline-checkpoint.ipynb  15_predict_using_hopsworks_model-checkpoint.ipynb  16_inference_pipeline-checkpoint.ipynb  test_12-checkpoint.ipynb
mlruns/0/.ipynb_checkpoints/: meta-checkpoint.yaml
mlruns/254530159747057773/: meta.yaml
mlruns/254530159747057773/0169a6d1bb6c4ad3a17486c028bd07e7/: meta.yaml
mlruns/254530159747057773/0f54f30752374a55beaf29485535cc27/: meta.yaml
mlruns/254530159747057773/103bf02b62c640199f9731f0b98d04c4/: meta.yaml
mlruns/254530159747057773/11d0a547440a4d59b8f447257b738282/: meta.yaml
mlruns/570833196741637509/: meta.yaml
models/: lgb_model.pkl
pipelines/: inference_pipeline.py
src/: config.py  data_utils.py  inference.py  plot_utils.py
src/.ipynb_checkpoints/: data_utils-checkpoint.py  experiment_utils-checkpoint.py  pipeline_utils-checkpoint.py
(+311 files in other folders)
