[project]
name = "nyc-taxi-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Sudeepthi-Rongali",email = "rongalisudeepthi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "nyc_taxi_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



